--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
     "mocha": "^1.21.4",
     "request": "^2.34.0",
     "chai": "^1.9.0"
+  },
+  "dependencies": {
+    "underscore": "~1.8.3",
+    "express": "~4.12.4"
   }
 }
